--- a/search.html
+++ b/search.html
@@ -1,3 +1,30 @@
+{if $wa->get('list') == 'viewed_products'}
+    {$title = '[`Viewed products`]'}
+    {$wa->title($title)}
+    {$pages_count = 1}
+    {$viewed_products = waRequest::cookie('viewed_products')}
+    {if !empty($viewed_products)}
+        {$products = $wa->shop->products("id/`$viewed_products`")}
+    {else}
+        {$products = null}   
+    {/if}
+{elseif $wa->get('list') == 'wishlist'}
+    {$title = '[`Wish List`]'}
+    {$wa->title($title)}
+    {$pages_count = 1}
+    {$wishlist = waRequest::cookie('shop_wishlist')}
+    {if !empty($wishlist)}
+        {$products = $wa->shop->products("id/`$wishlist`")}
+    {else}
+        {$products = null}   
+    {/if}
+{else}
+    {$is_products_pers = true}
+    {$title = "[`Search by query`] «`$wa->get('query')|escape`»"}
+{/if}
+
+{$compare = waRequest::cookie('shop_compare', array(), waRequest::TYPE_ARRAY_INT)}
+{$wishlist = waRequest::cookie('shop_wishlist', array(), waRequest::TYPE_ARRAY_INT)}
 <div>
     <h1 class="style-1">
         {$title}
@@ -26,44 +53,12 @@
         {include file='list-thumbs.html'}
     </div>
 {/if}
-<script type="text/javascript"><!--
-    $(document).ready(function() {
-        function display_view() {
-            if (view == 'list') {
-                $('.product-grid ').attr('class', 'product-list');
-                $('.product-list ul').removeClass('row');
-                $('.product-list ul li').removeClass('col-sm-4');
-                $('.product-list ul li').find('.image').addClass('col-sm-3');
-                $('.product-list ul li').find('.left').addClass('col-sm-9');
-                $('.product-list ul li').find('>div').attr('class', 'row');
-                $('#list_a').attr('id', 'list_b');
-                $('#grid_b').attr('id', 'grid_a');
-                $.totalStorage('display', 'list');
+</div>
 
-            } else {
-                $('.product-list').attr('class', 'product-grid');
-                $('.product-grid ul').addClass('row');
-                $('.product-grid ul li').addClass('col-sm-4');
-                $('.product-grid ul li').find('.image').removeClass('col-sm-3');
-                $('.product-grid ul li').find('.left').removeClass('col-sm-9');
-                $('.product-grid ul li').find('>div').attr('class', 'padding');
-                $('#list_b').attr('id', 'list_a');
-                $('#grid_a').attr('id', 'grid_b');
-                $.totalStorage('display', 'grid');
-            }
-        }
-
-        $('.display .display_view').click(function() {
-            view = $(this).data('view');
-            display_view(view);
-        });
-        view = $.totalStorage('display');
-
-        if (view) {
-            display_view(view);
-        } else {
-            display_view('grid');
-        }
-    });
-//--></script> 
+<div class="compare-form">
+    <a href="{$wa->getUrl('/frontend/compare/', ['id' => implode(',', $compare) ])}" class="bt_compare_bottom button" {if count($compare)<2}disabled="disabled"{/if}>
+        <span>
+            <i class="fa fa-bar-chart-o"></i> [`Compare`] (<strong class="total-compare-val">{count($compare)}</strong>)
+        </span>
+    </a>
 </div>
